--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Oybek <oybekmuslimov15@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "lint": "eslint ./src",
     "lint:test": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --fix"
