--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,18 +6,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [14]
+
     steps:
       - uses:
           actions/checkout@v2
 
-      - name: Set up project
+      - name: Set up NodeJS project
         uses:
           actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14.x
 
       - name: Install all dependencies
         run: yarn install
